k8s/etapa-2.5/07-allow-auditoria-to-nfs.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-nfs
  namespace: tipsbank-auditoria
spec:
  podSelector:
    matchLabels:
      app: auditoria
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 192.168.20.100/32
      ports:
        - protocol: TCP
          port: 2049
